<?xml version="1.0"?>
<package format="2">
  <name>decision_maker</name>
  <version>1.12.0</version>
  <description>The decision maker package for autoware</description>
  <maintainer email="azumi.suzuki@tier4.jp">Yusuke Fujii</maintainer>
  <author email="yusuke.fujii@tier4.jp">Yusuke Fujii</author>
  <author email="azumi.suzuki@tier4.jp">Yusuke Fujii</author>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>amathutils_lib</depend>
  <depend>autoware_config_msgs</depend>
  <depend>autoware_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>jsk_recognition_msgs</depend>
  <depend>jsk_rviz_plugins</depend>
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>state_machine_lib</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>vector_map</depend>
  <depend>vector_map_msgs</depend>
  <depend>lanelet2_extension</depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
</package>
