<?xml version="1.0"?>
<package format="2">
  <name>lane_planner</name>
  <version>1.12.0</version>
  <description>The lane_planner package</description>
  <maintainer email="tomo@axe-inc.co.jp">Tomomi HORII</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_msgs</depend>
  <depend>gnss</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>vector_map</depend>
  <depend>waypoint_follower</depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
</package>
