<?xml version="1.0"?>
<package format="2">
  <name>lattice_planner</name>
  <version>1.12.0</version>
  <description>The lattice_planner package</description>
  <maintainer email="mokelly@seas.upenn.edu">mokelly</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>armadillo</depend>
  <depend>autoware_can_msgs</depend>
  <depend>autoware_config_msgs</depend>
  <depend>gnss</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>vector_map</depend>
  <depend>libwaypoint_follower</depend>
  <depend>waypoint_planner</depend>
</package>
