<?xml version="1.0"?>
<package format="2">
  <name>op_utilities</name>
  <version>1.12.0</version>
  <description>The testing and logging utilities</description>
  <maintainer email="hatem.darweesh@tier4.jp">Yusuke FUJII</maintainer>
  <author email="hatem.darweesh@g.sp.m.is.nagoya-u.ac.jp">Hatem Darweesh</author>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>autoware_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>map_file</depend>  
  <depend>op_planner</depend>
  <depend>op_ros_helpers</depend>
  <depend>op_utility</depend>
  <depend>pcl_conversions</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>  
  <depend>vector_map_msgs</depend>
</package>
