<?xml version="1.0"?>
<package format="2">
  <name>pure_pursuit</name>
  <version>1.12.0</version>
  <description>The pure_pursuit package</description>
  <maintainer email="h_ohta@ertl.jp">h_ohta</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslint</build_depend>

  <depend>autoware_config_msgs</depend>
  <depend>autoware_health_checker</depend>
  <depend>autoware_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>libwaypoint_follower</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
</package>
